feat(harnessagent): 搭建售后工单调度 Agent 工作区并整理工具注册
- 新增 agentdir 工作区：AGENTS.md 主流程编排、knowledge/（退款政策、物流规则、风控规则及索引）、
  skills/mojibake-fixer（含修复脚本与参考文档）、四个 subagents 配置（订单核查/政策/风控/话术）、
  tools.json MCP 服务器配置
- AfterSaleTools 从 tool 子包移至 harnessagent 根包，清理冗余注释并统一 @Tool/@ToolParam 注解格式
- Sample：以 registerMetaTool 替代 enableMetaTool，新增 TodoTools 注册，移除遗留 MCP 注释
- Sample：workspace 路径改为定位到 harnessagent 目录，模型切换为 qwen3.7-plus，
  事件日志补充智能体名与工具名输出